@@ -1,3 +1,8 @@
+2006-05-28  Karl Berry  <karl@gnu.org>
+
+	* system.h [__CYGWIN__] (NULL_DEVICE): define as /dev/null.
+	From Ralf W.
+
 2006-05-27  Karl Berry  <karl@gnu.org>
 
 	* texi2dvi (IFS): initialize, since otherwise when we save/restore
